--- a/src/index.html
+++ b/src/index.html
@@ -11,9 +11,387 @@
       rel="stylesheet"
       href="./styles/main.scss"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans&family=Montserrat:wght@400;600;700&display=swap"
+      rel="stylesheet"
+    />
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
+  <body class="main">
+    <header class="header">
+      <div class="header__top">
+        <button class="header__burger-menu"></button>
+        <a
+          href="#"
+          class="header__logo"
+        >
+          NA
+          <br />
+          MU
+        </a>
+      </div>
+      <div class="header__content">
+        <div class="header__bg"></div>
+        <div class="header__tickets">
+          <h1 class="header__title">
+            ХУДОЖНІЙ
+            <br />
+            МУЗЕЙ
+          </h1>
+          <div class="header__tickets-cont">
+            <p class="header__tickets-text">КВИТКИ</p>
+            <button
+              class="header__tickets-btn"
+              aria-label="buy tickets"
+            ></button>
+          </div>
+        </div>
+      </div>
+    </header>
+
+    <aside class="menu">
+      <div class="menu__overlay"></div>
+      <div class="menu__content">
+        <button class="menu__close"></button>
+
+        <nav class="menu__nav">
+          <div class="menu__nav-item">
+            <a
+              href="#gallery"
+              class="menu__link"
+            >
+              Галерея
+            </a>
+            <a
+              href="#events"
+              class="menu__link"
+            >
+              Виставки та події
+            </a>
+          </div>
+          <div class="menu__nav-item">
+            <a
+              href="#"
+              class="menu__link"
+            >
+              Про нас
+            </a>
+            <a
+              href="#contacts"
+              class="menu__link"
+            >
+              Контакти
+            </a>
+          </div>
+        </nav>
+
+        <div class="menu__schedule schedule">
+          <h4 class="schedule__title">Графік роботи</h4>
+          <div class="schedule__dates">
+            <p class="schedule__day">
+              <span class="schedule__hours">12:00 — 20:00</span>
+              середа
+            </p>
+            <p class="schedule__day">
+              <span class="schedule__hours">12:00 — 20:00</span>
+              четвер
+            </p>
+            <p class="schedule__day">
+              <span class="schedule__hours">12:00 — 20:00</span>
+              п'ятниця
+            </p>
+            <p class="schedule__day">
+              <span class="schedule__hours">11:00 — 19:00</span>
+              субота
+            </p>
+            <p class="schedule__day">
+              <span class="schedule__hours">11:00 — 19:00</span>
+              неділя
+            </p>
+          </div>
+        </div>
+        <div class="menu__weekends">
+          <p class="menu__weekends-txt">
+            <span class="menu__weekends-bold">Вихідні:</span>
+            понеділок, вівторок
+            <br />
+            Каса припиняє роботу за 1 годину до закриття музею
+          </p>
+        </div>
+      </div>
+    </aside>
+
+    <div
+      class="events"
+      id="events"
+    >
+      <h2 class="events__title">Актуальні події</h2>
+      <section class="events__item">
+        <img
+          src="images/items/item-ico-landscape.png"
+          alt="landscape-ico"
+          class="events__img"
+        />
+
+        <div class="events__description">
+          <div class="events__container">
+            <p class="events__caption">ВИСТАВКА</p>
+            <p class="events__date">26.08-29.11.2019</p>
+          </div>
+          <h3 class="events__caption-title">
+            Йду і повертаюсь
+            <div class="events__square"></div>
+          </h3>
+
+          <p class="events__text">
+            Національний Художній Музей України презентує унікальну частину
+            колекції Градобанку - українське мистецтво другої половини 1980-1995
+            років.
+          </p>
+        </div>
+      </section>
+
+      <section class="events__item">
+        <img
+          src="images/items/item-ico-peacock.png"
+          alt="peacock-ico"
+          class="events__img"
+        />
+        <div class="events__description">
+          <div class="events__container">
+            <p class="events__caption">ВИСТАВКА</p>
+            <p class="events__date">26.08-29.11.2019</p>
+          </div>
+          <h3 class="events__caption-title">
+            І спогади і мрії
+            <div class="events__square"></div>
+          </h3>
+
+          <p class="events__text">
+            Національний художній музей України до 100 річчя від дня народження
+            видатної української художниці Тетяни Яблонської відкриває
+            ретроспективну ювілейну виставку «І спогади і мрії».
+          </p>
+        </div>
+      </section>
+
+      <section class="events__bottom">
+        <img
+          src="images/items/item-ico-sky.png"
+          alt="sky-ico"
+          class="events__img"
+        />
+
+        <div class="events__lection">
+          <div class="events__container events__container--bottom">
+            <p class="events__caption">ЛЕКЦІЯ</p>
+            <p class="events__date">26/08/2019 - 11:00</p>
+          </div>
+          <h3 class="events__caption-title events__caption-title--bottom">
+            Від класицизму до романтизму
+          </h3>
+        </div>
+      </section>
+    </div>
+    <div
+      class="gallery"
+      id="gallery"
+    >
+      <h2 class="gallery__title">Галерея</h2>
+      <div class="gallery__swiper">
+        <div class="gallery__wrapper">
+          <div class="gallery__slide gallery__slide--first">
+            <img
+              class="gallery__img"
+              src="images/items/item-ico-women.png"
+              alt="картина 1"
+            />
+          </div>
+          <div class="gallery__slide gallery__slide--second">
+            <img
+              class="gallery__img"
+              src="images/items/item-ico-houses.png"
+              alt="картина 2"
+            />
+          </div>
+          <div class="gallery__slide gallery__slide--third">
+            <img
+              class="gallery__img"
+              src="images/items/item-ico-park.png"
+              alt="картина 3"
+            />
+          </div>
+          <div class="gallery__slide gallery__slide--forth">
+            <img
+              class="gallery__img"
+              src="images/items/item-ico-sea.png"
+              alt="картина 4"
+            />
+          </div>
+        </div>
+
+        <div class="gallery__pagination"></div>
+      </div>
+    </div>
+
+    <div class="subscribe">
+      <h3 class="subscribe__title">Підписка</h3>
+      <p class="subscribe__text">
+        Бути в курсі всіх актуальних подій та останніх новин.
+      </p>
+      <form
+        action="/post"
+        method="POST"
+        class="subscribe__form"
+        onsubmit="this.reset();
+        return false;"
+      >
+        <input
+          type="email"
+          class="subscribe__email"
+          placeholder="E-mail"
+        />
+        <button
+          class="subscribe__button"
+          type="submit"
+        >
+          <div class="subscribe__button-bg"></div>
+        </button>
+      </form>
+    </div>
+    <footer class="footer">
+      <div
+        class="footer__icons"
+        id="contacts"
+      >
+        <a
+          href="#"
+          class="footer__logo"
+        >
+          NA
+          <br />
+          MU
+        </a>
+        <div class="footer__medias">
+          <a
+            href="https://www.facebook.com"
+            class="footer__link"
+            target="_blank"
+          >
+            <img
+              src="images/icons/icon-facebook-logo.png"
+              alt="facebook-logo"
+              class="footer__icon"
+            />
+          </a>
+          <a
+            href="https://www.instagram.com"
+            class="footer__link"
+            target="_blank"
+          >
+            <img
+              src="images/icons/icon-instagram-logo.png"
+              alt="instagram-logo"
+              class="footer__icon"
+            />
+          </a>
+        </div>
+      </div>
+      <div class="footer__schedule schedule">
+        <h4 class="schedule__title">Графік роботи</h4>
+        <div class="schedule__dates">
+          <p class="schedule__day">
+            <span class="schedule__hours">12:00 — 20:00</span>
+            середа
+          </p>
+          <p class="schedule__day">
+            <span class="schedule__hours">12:00 — 20:00</span>
+            четвер
+          </p>
+          <p class="schedule__day">
+            <span class="schedule__hours">12:00 — 20:00</span>
+            п'ятниця
+          </p>
+          <p class="schedule__day">
+            <span class="schedule__hours">11:00 — 19:00</span>
+            субота
+          </p>
+          <p class="schedule__day">
+            <span class="schedule__hours">11:00 — 19:00</span>
+            неділя
+          </p>
+        </div>
+        <div class="schedule__weekends">
+          <p class="schedule__weekends-txt">
+            <span class="schedule__weekends-bold">Вихідні:</span>
+            понеділок, вівторок
+            <br />
+            Каса припиняє роботу за 1 годину до закриття музею
+          </p>
+        </div>
+      </div>
+      <div class="footer__contacts">
+        <h4 class="footer__title">Контакти:</h4>
+        <ul class="footer__contacts-list">
+          <li class="footer__contacts-item">
+            вул. М. Грушевського, 6; Київ, 01001
+          </li>
+          <li class="footer__contacts-item">тел. +38 (044) 278-13-57</li>
+          <li class="footer__contacts-item">факс +38 (044) 278-74-54</li>
+          <li class="footer__contacts-item">e-mail: info@namu.kiev.ua</li>
+        </ul>
+      </div>
+      <div class="footer__line">
+        <a
+          href="#"
+          class="footer__arrow"
+        >
+          <img
+            src="images/icons/icon-arrow-up.png"
+            class="footer__arrow-img"
+            alt="arrow"
+          />
+        </a>
+      </div>
+      <div class="footer__nav footer__nav--left">
+        <a
+          href="#gallery"
+          class="footer__nav-link"
+        >
+          Галерея
+        </a>
+        <a
+          href="#events"
+          class="footer__nav-link"
+        >
+          Виставки та події
+        </a>
+      </div>
+      <div class="footer__nav footer__nav--right">
+        <a
+          href="#"
+          class="footer__nav-link"
+        >
+          Про нас
+        </a>
+        <a
+          href="#contacts"
+          class="footer__nav-link"
+        >
+          Контакти
+        </a>
+      </div>
+      <div class="footer__bottom">
+        <p class="footer__bottom-txt">
+          Copyright © 2019. All Rights Reserved.
+        </p>
+      </div>
+    </footer>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="scripts/main.js"></script>
+    <script src="scripts/swiper-init.js"></script>
   </body>
 </html>
