add favicon and title

--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,12 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
-    <title>Title</title>
+    <title>NA MU</title>
+    <link
+      rel="shortcut icon"
+      href="images/icons/icon-logo.png"
+      type="image/x-icon"
+    >
     <link
       rel="stylesheet"
       href="./styles/main.scss"
