updated links, hover and added type email

--- a/src/index.html
+++ b/src/index.html
@@ -138,7 +138,7 @@
         <img
           src="images/items/item-ico-landscape.png"
           alt="landscape-ico"
-          class="events__img"
+          class="events__img events__img--smooth"
         />
 
         <div class="events__description">
@@ -163,7 +163,7 @@
         <img
           src="images/items/item-ico-peacock.png"
           alt="peacock-ico"
-          class="events__img"
+          class="events__img events__img--smooth"
         />
         <div class="events__description">
           <div class="events__container">
@@ -255,8 +255,8 @@
         return false;"
       >
         <input
-          type="email"
           class="subscribe__email"
+          type="email"
           placeholder="E-mail"
         />
         <button
@@ -342,11 +342,41 @@
         <h4 class="footer__title">Контакти:</h4>
         <ul class="footer__contacts-list">
           <li class="footer__contacts-item">
-            вул. М. Грушевського, 6; Київ, 01001
+            <a
+              href="https://www.google.com/maps?q=вул.+М.+Грушевського,+6,+Київ"
+              target="_blank"
+              class="footer__contacts-link"
+            >
+              вул. М. Грушевського, 6; Київ, 01001
+            </a>
           </li>
-          <li class="footer__contacts-item">тел. +38 (044) 278-13-57</li>
-          <li class="footer__contacts-item">факс +38 (044) 278-74-54</li>
-          <li class="footer__contacts-item">e-mail: info@namu.kiev.ua</li>
+          <li class="footer__contacts-item">
+            <a
+              href="tel:+380442781357"
+              target="_blank"
+              class="footer__contacts-link"
+            >
+              тел. +38 (044) 278-13-57
+            </a>
+          </li>
+          <li class="footer__contacts-item">
+            <a
+              href="tel:+380442787454"
+              target="_blank"
+              class="footer__contacts-link"
+            >
+              факс +38 (044) 278-74-54
+            </a>
+          </li>
+          <li class="footer__contacts-item">
+            <a
+              href="mailto:info@namu.kiev.ua"
+              target="_blank"
+              class="footer__contacts-link"
+            >
+              e-mail: info@namu.kiev.ua
+            </a>
+          </li>
         </ul>
       </div>
       <div class="footer__line">
