fix phone version

--- a/src/index.html
+++ b/src/index.html
@@ -206,30 +206,30 @@
       id="gallery"
     >
       <h2 class="gallery__title">Галерея</h2>
-      <div class="gallery__swiper">
-        <div class="gallery__wrapper">
-          <div class="gallery__slide gallery__slide--first">
+      <div class="gallery__swiper swiper">
+        <div class="gallery__wrapper swiper-wrapper">
+          <div class="gallery__slide gallery__slide--first swiper-slide">
             <img
               class="gallery__img"
               src="images/items/item-ico-women.png"
               alt="картина 1"
             />
           </div>
-          <div class="gallery__slide gallery__slide--second">
+          <div class="gallery__slide gallery__slide--second swiper-slide">
             <img
               class="gallery__img"
               src="images/items/item-ico-houses.png"
               alt="картина 2"
             />
           </div>
-          <div class="gallery__slide gallery__slide--third">
+          <div class="gallery__slide gallery__slide--third swiper-slide">
             <img
               class="gallery__img"
               src="images/items/item-ico-park.png"
               alt="картина 3"
             />
           </div>
-          <div class="gallery__slide gallery__slide--forth">
+          <div class="gallery__slide gallery__slide--forth swiper-slide">
             <img
               class="gallery__img"
               src="images/items/item-ico-sea.png"
@@ -238,7 +238,7 @@
           </div>
         </div>
 
-        <div class="gallery__pagination"></div>
+        <div class="gallery__pagination swiper-pagination"></div>
       </div>
     </div>
 
