--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,8 @@
 <!doctype html>
-<html lang="en">
+<html
+  lang="en"
+  class="page"
+>
   <head>
     <meta charset="UTF-8" />
     <meta
@@ -8,12 +11,437 @@
     />
     <title>Title</title>
     <link
+      rel="icon"
+      href="./styles/images/logos/namu-logo-3x.png"
+    />
+    <link
+      rel="preconnect"
+      href="https://fonts.googleapis.com"
+    />
+    <link
+      rel="preconnect"
+      href="https://fonts.gstatic.com"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,100..700;1,100..700&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
-      href="./styles/main.scss"
+    />
+    <link
+      rel="stylesheet"
+      href="./styles/index.scss"
     />
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
+  <body class="page__body">
+    <header class="header">
+      <div class="header__top">
+        <a
+          href="#menu"
+          class="header__menu"
+        ></a>
+        <div class="header__image">
+          <h1 class="header__logo">
+            Na
+            <br />
+            Mu
+          </h1>
+        </div>
+      </div>
+      <div class="header__bottom">
+        <h1 class="header__bottom-title">ХУДОЖНІЙ МУЗЕЙ</h1>
+        <div class="header__bottom-button">
+          <div class="header__bottom-button-text">КВИТКИ</div>
+          <div class="header__bottom-button-btn"></div>
+        </div>
+        <div class="header__bottom-events">
+          <div class="header__bottom-events-line"></div>
+          <a
+            href="#events"
+            class="header__bottom-events-text"
+          >
+            ПОДІЇ
+          </a>
+        </div>
+      </div>
+    </header>
+
+    <aside
+      class="page__menu menu"
+      id="menu"
+    >
+      <div class="menu__wrapper">
+        <div class="menu__wrap">
+          <div class="menu__top">
+            <a
+              href="#"
+              class="menu__close"
+            ></a>
+            <nav class="menu__nav nav">
+              <ul class="nav__list">
+                <li class="nav__item">
+                  <a
+                    href="#gallery"
+                    class="nav__link"
+                  >
+                    Галерея
+                  </a>
+                </li>
+                <li class="nav__item">
+                  <a
+                    href="#events"
+                    class="nav__link"
+                  >
+                    Виставки та
+                    <br />
+                    події
+                  </a>
+                </li>
+              </ul>
+              <ul class="nav__list">
+                <li class="nav__item">
+                  <a
+                    href="#subscribe"
+                    class="nav__link"
+                  >
+                    Про Нас
+                  </a>
+                </li>
+                <li class="nav__item">
+                  <a
+                    href="#contacts"
+                    class="nav__link"
+                  >
+                    Контакти
+                  </a>
+                </li>
+              </ul>
+            </nav>
+          </div>
+          <div class="menu__line"></div>
+          <div class="menu__schedule schedule">
+            <h1 class="schedule__title">Графік роботи</h1>
+            <div class="schedule__wrapper">
+              <p class="schedule__info">
+                <strong>12:00 — 20:00</strong>
+                середа
+                <br />
+                <strong>12:00 — 20:00</strong>
+                четвер
+                <br />
+                <strong>12:00 — 20:00</strong>
+                п’ятниця
+                <br />
+                <strong>11:00 — 19:00</strong>
+                субота
+                <br />
+                <strong>11:00 — 19:00</strong>
+                неділя
+                <br />
+              </p>
+              <p class="schedule__info">
+                <strong>Вихідні:</strong>
+                понеділок, вівторок
+                <br />
+                Каса припиняє роботу за 1 годину до закриття музею
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </aside>
+
+    <main class="main">
+      <div class="main__content">
+        <section
+          class="section"
+          id="events"
+        >
+          <h1 class="section__title">Актуальні події</h1>
+          <div class="section__cards">
+            <article class="card">
+              <img
+                src="./styles/images/pictures/picture-3x.png"
+                class="card__photo"
+                alt="picture"
+              />
+              <div class="card__wrap">
+                <div class="card__info">
+                  <h2 class="card__exhibition">ВИСТАВКА</h2>
+                  <div class="card__date">26.08-29.11.2019</div>
+                </div>
+                <div class="card__title">
+                  <h3 class="card__title-text">Йду i повертаюсь</h3>
+                  <div class="card__title-square"></div>
+                </div>
+                <p class="card__description">
+                  Національний Художній Музей України презентує унікальну
+                  частину колекції Градобанку - українське мистецтво другої
+                  половини 1980-1995 років.
+                </p>
+              </div>
+            </article>
+            <article class="card">
+              <img
+                src="./styles/images/pictures/picture-2-3x.png"
+                class="card__photo"
+                alt="picture"
+              />
+              <div class="card__wrap">
+                <div class="card__info">
+                  <h2 class="card__exhibition">ВИСТАВКА</h2>
+                  <div class="card__date">26.08-29.11.2019</div>
+                </div>
+                <div class="card__title">
+                  <h3 class="card__title-text">І спогади і мрії</h3>
+                  <div class="card__title-square"></div>
+                </div>
+                <p class="card__description">
+                  Національний художній музей України до 100 річчя від дня
+                  народження видатної української художниці Тетяни Яблонської
+                  відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+                </p>
+              </div>
+            </article>
+            <div class="card_lecture">
+              <div class="card__photo-full"></div>
+              <div class="card__lection lection">
+                <div class="lection__wrapper">
+                  <div class="lection__info">
+                    <h3 class="lection__info-text">ЛЕКЦІЯ</h3>
+                    <div class="lection__info-date">26/08/2019 - 11:00</div>
+                  </div>
+                  <h1 class="lection__title">Від класицизму до романтизму</h1>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
+        <section
+          class="section__slider"
+          id="gallery"
+        >
+          <h1 class="section__title-slider">Галерея</h1>
+          <div class="slider__wrapper">
+            <div class="slider">
+              <img
+                id="picture-1"
+                src="./styles/images/slider/slider-picture-1-3x.png"
+                alt="picture"
+                class="slider__image image-1"
+              />
+              <img
+                id="picture-2"
+                src="./styles/images/slider/slider-picture-2-3x.png"
+                alt="picture"
+                class="slider__image image-2"
+              />
+              <img
+                id="picture-3"
+                src="./styles/images/slider/slider-picture-3-3x.png"
+                alt="picture"
+                class="slider__image image-3"
+              />
+              <img
+                id="picture-4"
+                src="./styles/images/slider/slider-picture-4-3x.png"
+                alt="picture"
+                class="slider__image image-4"
+              />
+            </div>
+            <div class="slider__nav">
+              <a
+                class="slider__nav-link"
+                href="#picture-1"
+              ></a>
+              <a
+                class="slider__nav-link"
+                href="#picture-2"
+              ></a>
+              <a
+                class="slider__nav-link"
+                href="#picture-3"
+              ></a>
+              <a
+                class="slider__nav-link"
+                href="#picture-4"
+              ></a>
+            </div>
+          </div>
+        </section>
+        <section
+          class="section__subscribe subscribe"
+          id="subscribe"
+        >
+          <div class="subscribe__wrapper">
+            <div class="subscribe__info">
+              <h1 class="subscribe__title">Підписка</h1>
+              <p class="subscribe__description">
+                Бути в курсі всіх актуальних подій та останніх новин.
+              </p>
+            </div>
+            <form
+              class="subscribe__form"
+              onsubmit="this.reset(); return false;"
+            >
+              <input
+                type="text"
+                placeholder="E-mail"
+                class="subscribe__form-input"
+                required
+              />
+              <button class="subscribe__form-button"></button>
+            </form>
+          </div>
+        </section>
+      </div>
+    </main>
+    <footer class="footer">
+      <div class="footer__wrapper">
+        <div class="footer__top-bar">
+          <h1 class="footer__top-bar-title">
+            NA
+            <br />
+            MU
+          </h1>
+          <div class="footer__top-bar-icones">
+            <a href="https://www.instagram.com/">
+              <img
+                src="./styles/images//logos/facebook-logo-svg.svg"
+                alt="icon"
+                class="footer__top-bar-icon"
+              />
+            </a>
+            <a href="https://www.facebook.com/">
+              <img
+                src="./styles/images/logos/instagram-logo-svg.svg"
+                alt="icon"
+                class="footer__top-bar-icon"
+              />
+            </a>
+          </div>
+        </div>
+        <div class="footer__schedule">
+          <h1 class="footer__schedule-title">Графік роботи</h1>
+          <p class="footer__schedule-description">
+            <strong>12:00— 20:00</strong>
+            <br />
+            середа
+            <br />
+            <strong>12:00— 20:00</strong>
+            <br />
+            четвер
+            <br />
+            <strong>12:00 — 20:00</strong>
+            <br />
+            п’ятниця
+            <br />
+            <strong>11:00 — 19:00</strong>
+            <br />
+            субота
+            <br />
+            <strong>11:00 — 19:00</strong>
+            <br />
+            неділя
+            <br />
+            <br />
+            Вихідні понеділок, вівторок Каса припиняє роботу за 1 годину до
+            закриття музею
+          </p>
+        </div>
+        <div
+          class="footer__contacts"
+          id="contacts"
+        >
+          <h1 class="footer__schedule-title">Контакти:</h1>
+          <p class="footer__schedule-description">
+            <a
+              class="footer__schedule-description-link"
+              href="https://maps.app.goo.gl/N43c7nNcWHYYGZc1A"
+            >
+              вул. М. Грушевського, 6; Київ, 01001
+            </a>
+            <br />
+            <a
+              class="footer__schedule-description-link"
+              href="tel: +380442781357"
+            >
+              тел. +38 (044) 278-13-57
+            </a>
+            <br />
+            <a
+              class="footer__schedule-description-link"
+              href="tel: +380442787454"
+            >
+              факс +38 (044) 278-74-54
+            </a>
+            <br />
+            <a
+              class="footer__schedule-description-link"
+              href="mailto: info@namu.kiev.ua"
+            >
+              e-mail: info@namu.kiev.ua
+            </a>
+            <br />
+          </p>
+        </div>
+        <a
+          href="#"
+          class="footer__button-up"
+        >
+          <img
+            src="./styles/images/arrows/arrow-up-3x.png"
+            alt="arrow-up"
+            class="footer__button-up-arrow"
+          />
+        </a>
+        <div class="footer__line"></div>
+        <nav class="footer__nav">
+          <ul class="footer__nav-list">
+            <li class="footer__nav-item">
+              <a
+                href="#gallery"
+                class="footer__nav-link"
+              >
+                Галерея
+              </a>
+            </li>
+            <li class="footer__nav-item">
+              <a
+                href="#events"
+                class="footer__nav-link"
+              >
+                Виставки та події
+              </a>
+            </li>
+          </ul>
+        </nav>
+        <nav class="footer__navigation">
+          <ul class="footer__nav-list">
+            <li class="footer__nav-item">
+              <a
+                href="#subscribe"
+                class="footer__nav-link"
+              >
+                Про Нас
+              </a>
+            </li>
+            <li class="footer__nav-item">
+              <a
+                href="#contacts"
+                class="footer__nav-link"
+              >
+                Контакти
+              </a>
+            </li>
+          </ul>
+        </nav>
+        <div class="footer__copyrights">
+          <p class="footer__design-author">Designed by Zhyriada Marina</p>
+          <p class="footer__copyright">
+            Copyright © 2019. All Rights Reserved.
+          </p>
+        </div>
+      </div>
+    </footer>
     <script src="scripts/main.js"></script>
   </body>
 </html>
