--- a/src/index.html
+++ b/src/index.html
@@ -201,7 +201,7 @@
                 </p>
               </div>
             </article>
-            <div class="card_lecture">
+            <div class="card__lecture">
               <div class="card__photo-full"></div>
               <div class="card__lection lection">
                 <div class="lection__wrapper">
@@ -283,7 +283,7 @@
               onsubmit="this.reset(); return false;"
             >
               <input
-                type="text"
+                type="email"
                 placeholder="E-mail"
                 class="subscribe__form-input"
                 required
@@ -303,14 +303,14 @@
             MU
           </h1>
           <div class="footer__top-bar-icones">
-            <a href="https://www.instagram.com/">
+            <a href="https://www.facebook.com/" target="_blank">
               <img
                 src="./styles/images//logos/facebook-logo-svg.svg"
                 alt="icon"
                 class="footer__top-bar-icon"
               />
             </a>
-            <a href="https://www.facebook.com/">
+            <a href="https://www.instagram.com/" target="_blank">
               <img
                 src="./styles/images/logos/instagram-logo-svg.svg"
                 alt="icon"
@@ -323,23 +323,18 @@
           <h1 class="footer__schedule-title">Графік роботи</h1>
           <p class="footer__schedule-description">
             <strong>12:00— 20:00</strong>
-            <br />
             середа
             <br />
             <strong>12:00— 20:00</strong>
-            <br />
             четвер
             <br />
             <strong>12:00 — 20:00</strong>
-            <br />
             п’ятниця
             <br />
             <strong>11:00 — 19:00</strong>
-            <br />
             субота
             <br />
             <strong>11:00 — 19:00</strong>
-            <br />
             неділя
             <br />
             <br />
