add task solution

--- a/src/index.html
+++ b/src/index.html
@@ -94,7 +94,7 @@
                   href="#events"
                   class="header__menu-link"
                 >
-                  Виставки
+                  Виставки та події
                 </a>
               </li>
             </ul>
