made the gallery section

--- a/src/index.html
+++ b/src/index.html
@@ -197,23 +197,48 @@
       </section>
 
       <section class="gallery">
-        <h2 class="section__title">Галерея</h2>
-        <div class="gallery__images">
-          <img
-            src="./images/gallery/women.png"
-            alt="women"
-            class="gallery__image">
+        <div class="container">
+          <h2 class="section__title">Галерея</h2>
+
+          <div class="gallery__images">
+            <img
+              class="gallery__image"
+              src="./images/gallery/women.png"
+              alt="women"
+            >
+            <img
+              class="gallery__image--medium"
+              src="./images/gallery/birds.png"
+              alt="birds"
+            >
+            <img
+              class="gallery__image--full"
+              src="./images/gallery/houses.png"
+              alt="houses"
+            >
+            <img
+              class="gallery__image--full"
+              src="./images/gallery/square.png"
+              alt="square"
+            >
+            <img
+              class="gallery__image--small"
+              src="./images/gallery/sea.png"
+              alt="sea"
+            >
+          </div>
+
+          <div class="gallery__scroll">
+            <img
+              class="gallery__scroll-icon"
+              src="./images/gallery/scroll.svg"
+              alt="scroll"
+            >
+          </div>
         </div>
-        <img
-          src="./images/gallery/scroll.svg"
-          alt="scroll"
-          class="gallery__scroll">
       </section>
     </main>
     <!-- #endregion -->
-
-
-    
     <!-- #region footer -->
     <footer class="footer">as</footer>
 
