add task solution

--- a/src/index.html
+++ b/src/index.html
@@ -25,14 +25,15 @@
       href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@400;600;700&family=Montserrat:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
+    <script src="./scripts/main.js" defer></script>
   </head>
   <body>
     <header class="header">
       <div class="header__content">
-        <a href="#dropdown-menu"
-        class="header__menu-icon" id="menu-toggle"
+        <a href="#menu" class="header__menu-icon"
         aria-label="Open menu">
-          <img src="./images/icons/burger-menu-icon.svg" alt="menu icon" />
+          <img src="./images/icons/burger-menu-icon.svg"
+          alt="Menu-icon" />
         </a>
 
         <div class="header__img">
@@ -68,13 +69,13 @@
         </div>
       </div>
 
-      <a href="#" class="header__overlay"></a>
+
       <!-- Dropdown Menu -->
-      <aside class="header__menu"
-      id="dropdown-menu" aria-hidden="true">
+      <aside id="menu" class="header__menu"
+      aria-hidden="false">
 
         <div class="header__menu-wrapper">
-          <a href="#" class="header__menu-icon-close"
+          <a href="#close" class="header__menu-icon-close"
           aria-label="Close menu">
             <img src="./images/icons/icon-close.svg" alt="Close menu icon" />
           </a>
@@ -94,7 +95,7 @@
                   href="#events"
                   class="header__menu-link"
                 >
-                  Виставки та події
+                  Виставки та <br> події
                 </a>
               </li>
             </ul>
@@ -153,6 +154,9 @@
           </div>
         </div>
       </aside>
+
+      <a href="#" class="header__overlay"
+            aria-hidden="true"></a>
 
     </header>
 
@@ -388,6 +392,6 @@
     </footer>
 
 
-
+    <div id="close" hidden></div>
   </body>
 </html>
