--- a/src/index.html
+++ b/src/index.html
@@ -237,11 +237,69 @@
           </div>
         </div>
       </section>
+
+      <section class="subscription">
+        <div class="container">
+          <div class="subscription__wrapper">
+            <div class="subscription__text">
+              <h2 class="subscription__title">Підписка</h2>
+              <p class="subscription__info">
+                Бути в курсі всіх актуальних подій та останніх новин.
+              </p>
+            </div>
+
+            <img
+              class="subscription__form"
+              src="./images/subscription/subscription_input.png"
+              alt="input and button"
+            >
+          </div>
+        </div>
+      </section>
     </main>
     <!-- #endregion -->
     <!-- #region footer -->
-    <footer class="footer">as</footer>
+    <footer class="footer">
+      <div class="container">
+        <div class="footer__bar"></div>
+        <div class="footer__info"></div>
 
+        <a class="footer__arrow" href="#header">
+          <img
+            class="footer__arrow__icon"
+            src="./images/footer-arrow.svg"
+            alt="Up arrow"
+          >
+        </a>
+
+        <hr class="footer__line">
+
+        <nav class="footer-nav">
+          <ul class="footer-nav__list">
+            <li class="footer-nav__item">
+              <a href="#" class="footer-nav__link">Галерея</a>
+            </li>
+            <li class="footer-nav__item">
+              <a href="#" class="footer-nav__link">Виставки та події</a>
+            </li>
+          </ul>
+
+          <ul class="footer-nav__list">
+            <li class="footer-nav__item">
+              <a href="#" class="footer-nav__link">Про Нас</a>
+            </li>
+            <li class="footer-nav__item">
+              <a href="#" class="footer-nav__link">Контакти</a>
+            </li>
+          </ul>
+        </nav>
+
+        <div class="footer__cor">
+          <p>Designed by Zhyriada Marina</p>
+          <p>Copyright © 2019. All Rights Reserved.</p>
+        </div>
+      </div>
+    </footer>
     <script src="scripts/main.js"></script>
   </body>
 </html>
