made the footer

--- a/src/index.html
+++ b/src/index.html
@@ -261,42 +261,80 @@
     <!-- #region footer -->
     <footer class="footer">
       <div class="container">
-        <div class="footer__bar"></div>
-        <div class="footer__info"></div>
+        <div class="footer__wrapper">
+          <div class="footer__bar">
+            <a href="#" class="footer__logo">
+              <img src="./images/footer/footer-logo.svg" alt="logo">
+            </a>
+            <div class="footer__icons">
+              <a href="#" class="footer__icon">
+                <img src="./images/footer/icon-fb.svg" alt="facebook">
+              </a>
+              <a href="#" class="footer__icon">
+                <img src="./images/footer/icon-inst.svg" alt="instagram">
+              </a>
+            </div>
+          </div>
 
-        <a class="footer__arrow" href="#header">
-          <img
-            class="footer__arrow__icon"
-            src="./images/footer-arrow.svg"
-            alt="Up arrow"
-          >
-        </a>
+          <div class="footer__schedule">
+            <h4 class="footer__title">Графік роботи</h4>
+            <ul class="footer__list">
+              <li><span class="footer__time">12:00 — 20:00</span>  середа</li>
+              <li><span class="footer__time">12:00 — 20:00</span>  четвер</li>
+              <li><span class="footer__time">12:00 — 20:00</span>  п’ятниця</li>
+              <li><span class="footer__time">11:00 — 19:00</span>  субота</li>
+              <li><span class="footer__time">11:00 — 19:00</span>  неділя</li>
+            </ul>
+            <p class="footer__text">
+              <span class="footer__day">Вихідні</span> понеділок, вівторок
+              Каса припиняє роботу за 1 годину
+              до закриття музею
+            </p>
+          </div>
 
-        <hr class="footer__line">
+          <div class="footer__contacts">
+            <h4 class="footer__title">Контакти:</h4>
+            <p>
+              вул. М. Грушевського, 6; Київ, 01001
+              <br>тел. +38 (044) 278-13-57
+              <br>факс +38 (044) 278-74-54
+              <br>e-mail: info@namu.kiev.ua
+            </p>
+          </div>
 
-        <nav class="footer-nav">
-          <ul class="footer-nav__list">
-            <li class="footer-nav__item">
-              <a href="#" class="footer-nav__link">Галерея</a>
-            </li>
-            <li class="footer-nav__item">
-              <a href="#" class="footer-nav__link">Виставки та події</a>
-            </li>
-          </ul>
+          <a class="footer__arrow" href="#header">
+            <img
+              class="footer__arrow__icon"
+              src="./images/footer-arrow.svg"
+              alt="Up arrow"
+            >
+          </a>
 
-          <ul class="footer-nav__list">
-            <li class="footer-nav__item">
-              <a href="#" class="footer-nav__link">Про Нас</a>
-            </li>
-            <li class="footer-nav__item">
-              <a href="#" class="footer-nav__link">Контакти</a>
-            </li>
-          </ul>
-        </nav>
+          <hr class="footer__line">
 
-        <div class="footer__cor">
-          <p>Designed by Zhyriada Marina</p>
-          <p>Copyright © 2019. All Rights Reserved.</p>
+          <nav class="footer__nav">
+            <ul class="footer__nav__list">
+              <li class="footer__nav__item">
+                <a href="#" class="footer__nav__link">Галерея</a>
+              </li>
+              <li class="footer__nav__item">
+                <a href="#" class="footer__nav__link">Виставки та події</a>
+              </li>
+            </ul>
+            <ul class="footer__nav__list">
+              <li class="footer__nav__item">
+                <a href="#" class="footer__nav__link">Про Нас</a>
+              </li>
+              <li class="footer__nav__item">
+                <a href="#" class="footer__nav__link">Контакти</a>
+              </li>
+            </ul>
+          </nav>
+
+          <div class="footer__cor">
+            <p>Designed by Zhyriada Marina</p>
+            <p>Copyright © 2019. All Rights Reserved.</p>
+          </div>
         </div>
       </div>
     </footer>
