conected the links

--- a/src/index.html
+++ b/src/index.html
@@ -74,19 +74,19 @@
 
           <ul class="nav__list">
             <li class="nav__item">
-              <a href="#" class="nav__link">Галерея</a>
+              <a href="#gallery" class="nav__link">Галерея</a>
             </li>
             <li class="nav__item">
-              <a href="#" class="nav__link">Виставки та <br> події</a>
+              <a href="#relevance" class="nav__link">Виставки та <br> події</a>
             </li>
           </ul>
 
           <ul class="nav__list">
             <li class="nav__item">
-              <a href="#" class="nav__link">Про Нас</a>
+              <a href="#subscription" class="nav__link">Про Нас</a>
             </li>
             <li class="nav__item">
-              <a href="#" class="nav__link">Контакти</a>
+              <a href="#footer" class="nav__link">Контакти</a>
             </li>
           </ul>
         </nav>
@@ -125,7 +125,7 @@
     <!-- #endregion -->
     <!-- #region main -->
     <main class="main">
-      <section class="relevance">
+      <section class="relevance" id="relevance">
         <div class="container">
           <h2 class="section__title">Актуальні події</h2>
 
@@ -196,7 +196,7 @@
         </div>
       </section>
 
-      <section class="gallery">
+      <section class="gallery" id="gallery">
         <div class="container">
           <h2 class="section__title">Галерея</h2>
 
@@ -238,7 +238,7 @@
         </div>
       </section>
 
-      <section class="subscription">
+      <section class="subscription" id="subscription">
         <div class="container">
           <div class="subscription__wrapper">
             <div class="subscription__text">
@@ -259,18 +259,27 @@
     </main>
     <!-- #endregion -->
     <!-- #region footer -->
-    <footer class="footer">
+    <footer class="footer" id="footer">
       <div class="container">
         <div class="footer__wrapper">
           <div class="footer__bar">
             <a href="#" class="footer__logo">
               <img src="./images/footer/footer-logo.svg" alt="logo">
             </a>
+
             <div class="footer__icons">
-              <a href="#" class="footer__icon">
+              <a
+                href="https://www.facebook.com/"
+                class="footer__icon"
+                target="_blank"
+              >
                 <img src="./images/footer/icon-fb.svg" alt="facebook">
               </a>
-              <a href="#" class="footer__icon">
+              <a
+                href="https://www.instagram.com"
+                class="footer__icon"
+                target="_blank"
+              >
                 <img src="./images/footer/icon-inst.svg" alt="instagram">
               </a>
             </div>
@@ -315,18 +324,18 @@
           <nav class="footer__nav">
             <ul class="footer__nav__list">
               <li class="footer__nav__item">
-                <a href="#" class="footer__nav__link">Галерея</a>
+                <a href="#gallery" class="footer__nav__link">Галерея</a>
               </li>
               <li class="footer__nav__item">
-                <a href="#" class="footer__nav__link">Виставки та події</a>
+                <a href="#relevance" class="footer__nav__link">Виставки та події</a>
               </li>
             </ul>
             <ul class="footer__nav__list">
               <li class="footer__nav__item">
-                <a href="#" class="footer__nav__link">Про Нас</a>
+                <a href="#subscription" class="footer__nav__link">Про Нас</a>
               </li>
               <li class="footer__nav__item">
-                <a href="#" class="footer__nav__link">Контакти</a>
+                <a href="#footer" class="footer__nav__link">Контакти</a>
               </li>
             </ul>
           </nav>
