made the header

--- a/src/index.html
+++ b/src/index.html
@@ -32,7 +32,11 @@
         >
       </a>
 
-      <a href="#" class="header__logo">
+      <a
+        class="header__logo"
+        href="https://namu.ua/"
+        target="_blank"
+      >
         <img
           src="./images/header/logo.png"
           alt="logo"
@@ -45,8 +49,8 @@
         alt="Museum logo"
       >
 
-      <div class="container">
-        <h1 class="header__title">ХУДОЖНІЙ МУЗЕЙ</h1>
+      <section class="header__art">
+        <h1 class="header__title">ХУДОЖНІЙ <br> МУЗЕЙ</h1>
         <div class="header__tickets">
           <a href="#" class="header__tickets-text">КВИТКИ</a>
           <button class="header__button">
@@ -57,14 +61,14 @@
             >
           </button>
         </div>
-      </div>
+      </section>
     </header>
     <!-- #endregion -->
     <!-- #region aside -->
     <aside class="aside" id="aside">
       <div class="container">
-        <nav class="nav">
-          <a href="#header" class="nav__close">
+        <div class="aside__wrapper">
+          <a href="#header" class="aside__close">
             <img
               class="nav__icon-close"
               src="./images/icon-close.svg"
@@ -72,53 +76,66 @@
             >
           </a>
 
-          <ul class="nav__list">
-            <li class="nav__item">
-              <a href="#gallery" class="nav__link">Галерея</a>
-            </li>
-            <li class="nav__item">
-              <a href="#relevance" class="nav__link">Виставки та <br> події</a>
-            </li>
-          </ul>
+          <nav class="nav">
+            <a href="#header" class="nav__close">
+              <img
+                class="nav__icon-close"
+                src="./images/icon-close.svg"
+                alt="icon close"
+              >
+            </a>
 
-          <ul class="nav__list">
-            <li class="nav__item">
-              <a href="#subscription" class="nav__link">Про Нас</a>
-            </li>
-            <li class="nav__item">
-              <a href="#footer" class="nav__link">Контакти</a>
-            </li>
-          </ul>
-        </nav>
+            <div class="nav__wrapper">
+              <ul class="nav__list">
+                <li class="nav__item">
+                  <a href="#gallery" class="nav__link">Галерея</a>
+                </li>
+                <li class="nav__item">
+                  <a href="#relevance" class="nav__link">Виставки та <br> події</a>
+                </li>
+              </ul>
 
-        <hr class="aside__line">
+              <ul class="nav__list">
+                <li class="nav__item">
+                  <a href="#subscription" class="nav__link">Про Нас</a>
+                </li>
+                <li class="nav__item">
+                  <a href="#footer" class="nav__link">Контакти</a>
+                </li>
+              </ul>
+            </div>
+          </nav>
 
-        <div class="aside__text">
-          <p class="aside__schedule">Графік роботи</p>
+          <hr class="aside__line">
 
-          <ul class="aside__list">
-            <li class="aside__time">
-              <span class="aside__bold">12:00 — 20:00 </span>середа
-            </li>
-            <li class="aside__time">
-              <span class="aside__bold">12:00 — 20:00 </span>четвер
-            </li>
-            <li class="aside__time">
-              <span class="aside__bold">12:00 — 20:00  </span>п’ятниця
-            </li>
-            <li class="aside__time">
-              <span class="aside__bold">11:00 — 19:00  </span>субота
-            </li>
-            <li class="aside__time">
-              <span class="aside__bold">11:00 — 19:00  </span>неділя
-            </li>
-          </ul>
+          <div class="aside__text">
+            <div class="aside__schedule">
+              <p class="aside__title">Графік роботи</p>
+              <ul class="aside__list">
+                <li class="aside__time">
+                  <span class="aside__bold">12:00 — 20:00 </span>середа
+                </li>
+                <li class="aside__time">
+                  <span class="aside__bold">12:00 — 20:00 </span>четвер
+                </li>
+                <li class="aside__time">
+                  <span class="aside__bold">12:00 — 20:00  </span>п’ятниця
+                </li>
+                <li class="aside__time">
+                  <span class="aside__bold">11:00 — 19:00  </span>субота
+                </li>
+                <li class="aside__time">
+                  <span class="aside__bold">11:00 — 19:00  </span>неділя
+                </li>
+              </ul>
+            </div>
 
-          <p class="aside__information">
-            <span class="aside__bold">Вихідні:</span> понеділок, вівторок <br>
-            Каса припиняє роботу за 1 годину
-            до закриття музею
-          </p>
+            <p class="aside__information">
+              <span class="aside__bold">Вихідні:</span> понеділок, вівторок <br>
+              Каса припиняє роботу за 1 годину
+              до закриття музею
+            </p>
+          </div>
         </div>
       </div>
     </aside>
@@ -269,14 +286,14 @@
 
             <div class="footer__icons">
               <a
-                href="https://www.facebook.com/"
+                href="https://www.facebook.com/namu.museum/?locale=uk_UA"
                 class="footer__icon"
                 target="_blank"
               >
                 <img src="./images/footer/icon-fb.svg" alt="facebook">
               </a>
               <a
-                href="https://www.instagram.com"
+                href="https://www.instagram.com/namu.museum/"
                 class="footer__icon"
                 target="_blank"
               >
