--- a/src/index.html
+++ b/src/index.html
@@ -270,6 +270,11 @@
               src="./images/subscription/subscription_input.png"
               alt="input and button"
             >
+
+            <!-- <form action="" class="subscription__form">
+              <input type="text" class="subscription__i">
+              <input type="text" class="subscription__i">
+            </form> -->
           </div>
         </div>
       </section>
