made the form for the subscription section

--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
+    <link rel="icon" href="./images/header/logo-s.svg">
     <title>Museum</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link
@@ -48,6 +49,8 @@
         src="./images/header/header-bg.png"
         alt="Museum logo"
       >
+
+      <!-- onsubmit="this.reset(); return false;" -->
 
       <section class="header__art">
         <h1 class="header__title">ХУДОЖНІЙ <br> МУЗЕЙ</h1>
@@ -265,11 +268,21 @@
               </p>
             </div>
 
-            <img
-              class="subscription__form"
-              src="./images/subscription/subscription_input.png"
-              alt="input and button"
-            >
+            <form class="subscription__form" action="#">
+              <input
+                 class="subscription__input"
+                 type="email"
+                 placeholder="E-mail"
+                 required
+               >
+              <button class="subscription__button">
+                <img
+                  class="subscription__arrow"
+                  src="./images/subscription/black-arrow.svg"
+                  alt="arrow"
+                >
+              </button>
+            </form>
           </div>
         </div>
       </section>
