--- a/src/index.html
+++ b/src/index.html
@@ -268,6 +268,17 @@
               </p>
             </div>
 
+            <form
+              class="subscription__form"
+              action="#"
+              placeholder="E-mail"
+              required
+            >
+              <input type="email" class="subscription__input">
+              <button class="subscription__button">
+                <img src="./images/subscription/black-arrow.svg" alt="arrow">
+              </button>
+            </form>
           </div>
         </div>
       </section>
