made a form in the subscription section

--- a/src/index.html
+++ b/src/index.html
@@ -271,10 +271,17 @@
             <form
               class="subscription__form"
               action="#"
-              placeholder="E-mail"
-              required
+              name="subscription"
+              id="subscription__form"
+
             >
-              <input type="email" class="subscription__input">
+              <input
+                class="subscription__input"
+                name="subscription__input"
+                type="email"
+                placeholder="E-mail"
+                required
+              >
               <button class="subscription__button">
                 <img src="./images/subscription/black-arrow.svg" alt="arrow">
               </button>
