the subscription form is cleared and reloaded

--- a/src/index.html
+++ b/src/index.html
@@ -273,7 +273,7 @@
               action="#"
               name="subscription"
               id="subscription__form"
-
+              onsubmit="this.reset(); return reloaded;"
             >
               <input
                 class="subscription__input"
