--- a/src/index.html
+++ b/src/index.html
@@ -54,8 +54,9 @@
 
       <section class="header__art">
         <h1 class="header__title">ХУДОЖНІЙ <br> МУЗЕЙ</h1>
-        <div class="header__tickets">
-          <a href="#" class="header__tickets-text">КВИТКИ</a>
+
+        <!-- <form action="#" class="header__tickets">
+          <input type="email" class="header__input">
           <button class="header__button">
             <img
               class="header__arrow"
@@ -63,7 +64,32 @@
               alt="arrow"
             >
           </button>
+        </form> -->
+
+        <div class="header__tickets">
+          <div class="header__tickets-text">КВИТКИ</div>
+          <a href="#" class="header__tickets-link">
+            <img
+              class="header__arrow"
+              src="./images/header/arrow-white.png"
+              alt="arrow"
+            >
+          </a>
         </div>
+
+        <!-- ---------------------------------------- -->
+
+        <!-- <div class="header__tickets">
+          <div class="header__tickets-text">КВИТКИ</div>
+          <button class="header__button">
+            <img
+              class="header__arrow"
+              src="./images/header/arrow-white.png"
+              alt="arrow"
+            >
+          </button>
+        </div> -->
+
       </section>
     </header>
     <!-- #endregion -->
