--- a/src/index.html
+++ b/src/index.html
@@ -95,7 +95,7 @@
     <!-- #endregion -->
     <!-- #region aside -->
     <aside class="aside" id="aside">
-      <div class="container">
+      <div class="aside__container">
         <div class="aside__wrapper">
           <a href="#header" class="aside__close">
             <img
